--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,6 +2,72 @@ name: CI
 
 on:
   push:
+    branches: [ main ]
+  pull_request:
+    branches: [ main ]
+
+jobs:
+  test:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Set up Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: '3.11'
+
+      - name: Cache pip
+        uses: actions/cache@v4
+        with:
+          path: ~/.cache/pip
+          key: ${{ runner.os }}-pip-${{ hashFiles('**/requirements.txt') }}
+          restore-keys: |
+            ${{ runner.os }}-pip-
+
+      - name: Build and start services (docker compose)
+        env:
+          COMPOSE_DOCKER_CLI_BUILD: 1
+          DOCKER_BUILDKIT: 1
+        run: |
+          docker compose up -d --build
+
+      - name: Wait for Postgres and services
+        run: |
+          sudo apt-get update -y
+          sudo apt-get install -y netcat curl
+          for i in {1..60}; do
+            nc -z localhost 5432 && echo "Postgres is up" && break
+            echo "Waiting for Postgres... ($i)"; sleep 2
+          done
+          # wait for orders service
+          for i in {1..60}; do
+            if curl -sSf http://localhost:8004/ >/dev/null 2>&1; then echo "orders-service up" && break; fi
+            echo "Waiting for orders-service... ($i)"; sleep 2
+          done
+
+      - name: Run DB seeder
+        run: |
+          docker compose run --rm db-seed
+
+      - name: Install test requirements
+        run: |
+          python -m pip install --upgrade pip
+          python -m pip install -r requirements.txt
+
+      - name: Run tests
+        run: |
+          python -m pytest -q
+
+      - name: Tear down compose
+        if: always()
+        run: |
+          docker compose down --volumes
+name: CI
+
+on:
+  push:
     branches: [ main, master ]
   pull_request:
     branches: [ main, master ]
