--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -36,7 +36,8 @@ jobs:
       - name: Wait for Postgres and services
         run: |
           sudo apt-get update -y
-          sudo apt-get install -y netcat curl
+          # install netcat-openbsd (provides `nc`) and curl
+          sudo apt-get install -y netcat-openbsd curl
           for i in {1..60}; do
             nc -z localhost 5432 && echo "Postgres is up" && break
             echo "Waiting for Postgres... ($i)"; sleep 2
